--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -25,12 +25,21 @@
             android:layout_marginBottom="10dp"/>
 
         <EditText
+            android:id="@+id/etDisplayName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textEmailAddress"
+            android:hint="Enter Display Name" />
+
+        <EditText
             android:id="@+id/etEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textEmailAddress"
-            android:hint="Enter Your Email" />
+            android:hint="Enter Your Email"
+            android:layout_marginTop="10dp" />
 
         <EditText
             android:id="@+id/etPassword"
