finished recycler view

--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:paddingTop="50px">
 
     <ImageView
         android:id="@+id/ivPostImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        android:paddingTop="50px"
         app:srcCompat="@drawable/ic_launcher_background"
-        tools:layout_editor_absoluteY="103dp" />
+        tools:layout_editor_absoluteY="19dp" />
 
     <TextView
         android:id="@+id/tvUsername"
@@ -22,13 +20,15 @@
         android:layout_height="wrap_content"
         android:text="Username"
         app:layout_constraintBottom_toTopOf="@+id/ivPostImage"
-        app:layout_constraintStart_toStartOf="@+id/ivPostImage" />
+        app:layout_constraintStart_toStartOf="@+id/ivPostImage"
+        app:layout_constraintTop_toTopOf="@+id/tvTimestamp" />
 
     <TextView
         android:id="@+id/tvReactions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Reactions"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivPostImage" />
@@ -39,5 +39,6 @@
         android:layout_height="wrap_content"
         android:text="timestamp"
         app:layout_constraintBottom_toTopOf="@+id/ivPostImage"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
