--- a/app/src/main/res/layout/activity_group_feed.xml
+++ b/app/src/main/res/layout/activity_group_feed.xml
@@ -9,9 +9,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPostFeed"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,9 +33,8 @@
 
     <TextView
         android:id="@+id/tvGroupFeedTitle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:elevation="6dp"
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
@@ -42,7 +42,23 @@
         android:text="GroupName"
         android:textSize="30sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@id/btnAddPeople"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/btnAddPeople"
+        android:layout_width="60dp"
+        android:layout_height="50dp"
+
+        android:backgroundTint="@color/transparent"
+        android:scaleX="0.5"
+        android:scaleY="0.5"
+        android:layout_marginEnd="5dp"
+        android:src="@drawable/ic_add_people_foreground"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/ripple"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
