--- a/app/src/main/res/layout/activity_user_content.xml
+++ b/app/src/main/res/layout/activity_user_content.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserContent">
+    tools:context=".UserContent"
+    android:background="@color/backgroundGrey">
 
     <Button
         android:id="@+id/btnLogout"
@@ -47,12 +48,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvGroups"
-        android:layout_width="409dp"
-        android:layout_height="681dp"
+        android:layout_width="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnLogout" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLogout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="0dp"
+        android:backgroundTint="@color/transparent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
