--- a/app/src/main/res/layout/group.xml
+++ b/app/src/main/res/layout/group.xml
@@ -26,10 +26,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="TextView"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvGroupName" />
+        app:layout_constraintTop_toBottomOf="@+id/tvGroupName"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:singleLine="true"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
