--- a/app/src/main/res/layout/activity_user_content.xml
+++ b/app/src/main/res/layout/activity_user_content.xml
@@ -23,18 +23,21 @@
 
     <TextView
         android:id="@+id/tvUser"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="Username"
         android:textSize="50px"
         android:textStyle="bold"
-
-        android:layout_marginRight="3dp"
+        android:gravity="right"
+        android:layout_marginRight="6dp"
         app:layout_constraintBottom_toTopOf="@id/rvGroups"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvLogo"
         app:layout_constraintTop_toTopOf="parent"
-         />
+        app:layout_constraintHorizontal_bias="0.9"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:singleLine="true" />
 
     <ImageButton
         android:id="@+id/btnAdd"
