--- a/app/src/main/res/layout/activity_user_content.xml
+++ b/app/src/main/res/layout/activity_user_content.xml
@@ -29,7 +29,7 @@
         android:textSize="50px"
         android:textStyle="bold"
         android:gravity="right"
-        android:layout_marginRight="6dp"
+        android:layout_marginRight="10dp"
         app:layout_constraintBottom_toTopOf="@id/rvGroups"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvLogo"
@@ -61,7 +61,8 @@
         app:layout_constraintTop_toBottomOf="@+id/btnLogout"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_height="0dp"
-        android:backgroundTint="@color/transparent"/>
+        android:backgroundTint="@color/transparent"
+        android:layout_marginBottom="10dp"/>
 
     <TextView
         android:id="@+id/tvLogo"
